# ha-meat-thermometer

./: .clang-format  .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
front/web-app/: DEVELOPMENT.md  build-server.js  eslint.config.mjs  esp32-config.ts  next.config.ts  package.json  pnpm-lock.yaml  server.ts  test-api.js  test-esp32-connection.js  test-esp32-connection.ts  test-esp32.mjs  tsconfig.json
front/web-app/app/: globals.css  layout.tsx  page.tsx
front/web-app/app/api/: api-hooks-template.ts  system-info.tsx  temperature.ts  wifi-scan.ts  wifi-station.ts
front/web-app/app/settings/: layout.tsx  page.tsx  types.ts
front/web-app/app/settings/components/: GlobalSettings.tsx  MQTTSettings.tsx  ThermometerSettings.tsx  WiFiSettings.tsx
front/web-app/components/: TemperatureMonitor.tsx  theme-provider.tsx  theme-toggle.tsx
front/web-app/lib/: README.md  api-utils.ts
front/web-app/scripts/: test-esp32-connection.ts
front/web-app/src/app/: api.tsx  page.tsx
front/web-app/src/app/settings/: page.tsx
front/web-app/src/components/: theme-toggle.tsx
main/: CMakeLists.txt  display.c  esp_rest_main.c  idf_component.yml  main.c  rest_server.c  wifi.c  wifi.h  wifi_scan.c  wifi_soft_ap.c  wifi_soft_ap.h  wifi_sta.c
main/console/: console.c
main/settings/: settings.c  settings.h
main/temperature/: temperature.c  temperature.h
main/wifi/: wifi.c  wifi.h  wifi_scan.c  wifi_scan.h  wifi_soft_ap.c  wifi_sta.c  wifi_sta.h
